--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,8 @@ ul
 .foot-text
 {
     color: #f4f4fd;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 /* .logo-foot {
     text-transform: uppercase;
