--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,8 @@ a.navigacion-text {
     /* color: #434455; */
 }
 
-a.home-text {
+a.address-text {
     color: #2e2f42;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
 }
 
 .link:hover,
